# python-mastery

./: .gitignore  pyproject.toml
Data/: stocksim.py
Solutions/1_1/: art.py
Solutions/2_1/: readrides.py
Solutions/2_2/: cta.py  readport.py
Solutions/2_4/: mutint.py
Solutions/2_5/: readrides.py
Solutions/2_6/: colreader.py  cta.py  reader.py
Solutions/3_3/: reader.py  stock.py
Solutions/3_7/: reader.py  tableformat.py
Solutions/3_8/: stock.py  tableformat.py
Solutions/5_2/: reader.py
Solutions/5_3/: reader.py
Solutions/6_1/: stock.py
Solutions/6_2/: stock.py  structure.py
Solutions/6_3/: stock.py  structure.py
Solutions/6_4/: stock.py
Solutions/6_5/: validate.py
Solutions/7_1/: sample.py  validate.py
Solutions/7_2/: logcall.py  sample.py  validate.py
Solutions/7_3/: structure.py  validate.py
Solutions/7_4/: structure.py  teststock.py  validate.py
Solutions/7_6/: stock.py  structure.py
Solutions/8_1/: follow.py  stock.py  structure.py  validate.py
Solutions/8_2/: follow.py  tableformat.py  ticker.py
Solutions/8_3/: cofollow.py  coticker.py
Solutions/8_4/: cofollow.py  follow.py
Solutions/8_5/: server.py
Solutions/8_6/: asyncserver.py  cofollow.py  coticker.py  server.py  structure.py
Solutions/9_2/: stock.py
Solutions/9_3/: stock.py
src/1_1/: art.py
src/1_3/: pcost.py
src/1_4/: pcost.py
src/1_5/: stock.py
src/2_1/: readrides.py
src/2_2/: readrides.py
src/2_5/: readrides.py
src/sol_2_2/: analisis.py
src/sol_2_6/: reader.py
src/sol_3_1/: stock.py
src/sol_3_2/: tableformat.py
(+79 files in other folders)
