[tool.poetry]
name = "python-mastery"
version = "0.1.0"
description = ""
authors = ["Dmitriy <dimk00z@gmail.com>"]
readme = "README.md"
packages = [{include = "python_mastery"}]

[tool.poetry.dependencies]
python = "^3.11"
ipython = "^8.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
