[tool.poetry]
name = "python-mastery"
version = "0.1.0"
description = ""
authors = ["Dmitriy <dimk00z@gmail.com>"]
readme = "README.md"
packages = [{include = "python_mastery"}]

[tool.poetry.dependencies]
python = "^3.11"
ipython = "^8.14.0"
pydantic = "^2.1.1"
msgspec = "^0.17.0"
isort = "^5.12.0"
mypy = "^1.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
